--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,9 @@
-2021-09-30
+2021-11-29
 
         * Version 2.0.0 released
         ========================
 
+        Add phi_first and phi_last parameters to comlixfit and comlixmap (#3912)
         Add csadd2caldb script
         Add restart of bisection in case of bad convergence in ctulimit
         Add COMPTEL analysis scripts (#3738)
