--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,9 @@
-2022-01-19
+2022-02-02
 
         * Version 2.0.0 released
         ========================
 
+        Add methods to access ctlike attributes
         Add csadd2caldb script
         Add restart of bisection in case of bad convergence in ctulimit
         Add COMPTEL analysis scripts (#3738)
