--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,9 @@
-2022-02-22
+2022-02-25
 
         * Version 2.0.0 released
         ========================
 
+        Add comgendb script (#3983)
         Rename virtual abstract ctool::run() method to ctool::process() and
           add non-abstract ctool::run() method (#3592) (#3592)
         Add methods to access ctlike attributes
