--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,9 @@
-2022-03-18
+2022-05-25
 
         * Version 2.0.0 released
         ========================
 
+        Add support for ASTRI instrument (#4058)
         Allow determination of upper limits on spatial parameters in ctulimit (#4006)
         Add comgendb script (#3983)
         Rename virtual abstract ctool::run() method to ctool::process() and
