--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2022-06-23
+
+        * Version 2.1.0 released
+        ========================
+
+        Avoid NaN in ctbutterfly (#4069)
+
+
 2022-06-06
 
         * Version 2.0.0 released
