--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 New Features and Important Changes in ctools 2.1.0
 
-5 January 2023
+18 January 2023
 
 
 Introduction
@@ -331,6 +331,10 @@ None
 
 comlixmap - Generation of COMPTEL Test Statistic map using SRCLIX algorithm
 ---------------------------------------------------------------------------
+The script prefits now the models without test source before entering the TS
+map computation. This may lead to a speed-up as fewer SRCLIX iterations will
+be needed for each test source position (#4201).
+
 Added an "inmap" parameter to allow restart the computations from an existing
 TS map without recomputation of values that exist. The script now also writes
 parameter uncertainties in the resulting TS map FITS file (#4187).
