--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,9 @@
-2023-03-15
+2023-03-22
 
         * Version 2.1.0 released
         ========================
 
+        Add collection of HKD datasets to comgendb (#4209)
         Replace distutils by setuptools for Python setup (#4223)
         Add support for DRW weighting cubes (#4209)
         Prefit models without test source in comlixmap (#4201)
